# zhaba-script-playground

./: .gitignore  .gitmodules  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.md
.github/workflows/: build_deploy.yml
playground/: .eslintignore  .gitignore  package-lock.json  package.json  tsconfig.json
playground/public/: index.html  zh.tmLanguage.json
playground/src/: App.jsx  App.tsx  ZhDocs.tsx  ZhEditor.tsx  examples.js  examples.ts  index.js  index.tsx  styles.css  theme.js  theme.ts  util.ts
playground/src/Examples/: fibonacci.js  for_.js  hello_world.js  pointer_arithmetic.js  vector.js
playground/src/MonacoEditor/: config.js  config.ts  index.jsx  theme.js  theme.ts
playground/src/zhaba/: build.data  build.mjs  zhaba.js  zhaba.ts
zhaba/: Makefile  em.hpp  main.cpp
